sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:7: error: not found: value getvalueCount
    for (k<- getvalueCount()-2 to 0){
             ^AlgCocktailSort1:13: error: not found: value valueCount
    for (k<- 0 to valueCount()-2){
                  ^